--- a/index.html
+++ b/index.html
@@ -833,7 +833,7 @@
       Email.send({
     Host : "smtp.gmail.com",
     Username : "jatin.kushwahabtechibm2@uniteduniversity.edu.in",
-    Password : "jatinbtechibm2@uu",
+    Password : "        ",
     To : 'jatin.kushwahabtechibm2@uniteduniversity.edu.in',
     From: document.getElementById("email").value,
     Subject : "This is the subject",
